--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,29 @@
   flex-direction: row;
 }
 
+img {
+  max-height: 60px;
+  max-width: 60px;
+  width: auto;
+  height: auto;
+}
+
+.LikedCats, .DislikedCats, {
+  flex: 1;
+}
+
+.DislikedCats {
+  background-color: #f2dadf;
+}
+
+.LikedCats {
+  background-color: #eaffce;
+}
+
+.CenterContainer {
+  flex: 2;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
