--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,12 @@ img {
   flex: 2;
 }
 
+.NextUpCats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
